[gd_scene format=3 uid="uid://dgipnqfv8g6kp"]

[ext_resource type="Script" uid="uid://vr121va4dfsr" path="res://entities/character/weapon/bullet/bullet.gd" id="1_ys2a0"]
[ext_resource type="PackedScene" uid="uid://1h1j3w4uclbl" path="res://entities/components/hitbox_component.tscn" id="2_p8gu1"]
[ext_resource type="PackedScene" uid="uid://ccpbqu2hqer7g" path="res://entities/components/velocity_component.tscn" id="3_pjrsy"]
[ext_resource type="Texture2D" uid="uid://c8ynp7dkc6nyw" path="res://assets/character/bullet/bullet.png" id="4_4j35j"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qxdp6"]
radius = 6.0
height = 34.0

[sub_resource type="Animation" id="Animation_kpyww"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_mb0r3"]
resource_name = "bullet_appear"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_lekwy"]
resource_name = "remove"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8xrtf"]
_data = {
&"RESET": SubResource("Animation_kpyww"),
&"bullet_appear": SubResource("Animation_mb0r3"),
&"remove": SubResource("Animation_lekwy")
}

[node name="Bullet" type="Node2D" unique_id=1129987846]
script = ExtResource("1_ys2a0")
speed = 100

[node name="HitboxComponent" parent="." unique_id=962314165 instance=ExtResource("2_p8gu1")]
collision_layer = 8
collision_mask = 4
damage = 25

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent" unique_id=1032640744]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_qxdp6")

[node name="VelocityComponent" parent="." unique_id=436425407 instance=ExtResource("3_pjrsy")]
friction = 0.3

[node name="DistanceTimeout" type="Timer" parent="." unique_id=2077873900]
wait_time = 2.0
one_shot = true
autostart = true

[node name="PlayerBullet" type="Sprite2D" parent="." unique_id=1827283397]
z_index = -1
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("4_4j35j")

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerBullet" unique_id=1174008732]
libraries/ = SubResource("AnimationLibrary_8xrtf")
autoplay = &"bullet_appear"

[connection signal="hit_registered" from="HitboxComponent" to="." method="_on_hitbox_component_hit_registered"]
[connection signal="timeout" from="DistanceTimeout" to="." method="_on_distance_timeout"]
[connection signal="animation_finished" from="PlayerBullet/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
